--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -309,3 +309,44 @@ a {
 }
 
 /* //商品一覧 */
+
+// カテゴリー欄
+.box-square {
+  position: relative;
+    margin: 2em 0;
+    padding: 0.5em 1em;
+    border: solid 3px #3ccace;
+    border-radius: 8px;
+}
+
+.box-square .box-title {
+  position: absolute;
+  display: inline-block;
+  top: -13px;
+  left: 10px;
+  padding: 0 9px;
+  line-height: 1;
+  font-size: 19px;
+  background: #FFF;
+  color: #3ccace;
+  font-weight: bold;
+}
+
+.category-name {
+  // position: absolute;
+  font-size: 24px;
+}
+
+.category-name {
+  display: block;
+  text-align: center;
+  margin: 24px 0;
+  font-weight: bold;
+
+}
+
+.search-btn {
+  display: block;
+  margin: 24px auto;
+  font-size: 24px;
+}
