font awesomeを使用しての各ビューファイル編集

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csp_meta_tag %>
   <script type="text/javascript" src="https://js.pay.jp/v1/"></script>
   <%= stylesheet_link_tag 'application', media: 'all'%>
+  <script src="https://kit.fontawesome.com/63753bcf5c.js" crossorigin="anonymous"></script>
   <%= javascript_pack_tag 'application' %>
 </head>
 
