--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -164,7 +164,6 @@
                 <span>Sold Out!!</span>
               </div>
               <% end %>
-
             </div>
             <div class='item-info'>
               <h3 class='item-name'>
@@ -172,10 +171,24 @@
               </h3>
               <div class='item-price'>
                 <span><%= item.selling_price %>円<br><%= item.burden.name%></span>
-                <div class='star-btn'>
-                  <%= image_tag "star.png", class:"star-icon" %>
-                  <span class='star-count'>0</span>
-                </div>
+
+              <% if user_signed_in? %>
+                <% if item.user_id != current_user.id %>
+                  <% if Like.exists?(user_id: current_user.id, item_id: item.id) %>
+                    <%= link_to item_like_path(item_id: item.id, id: item.likes[0].id ), method: :delete do %>
+                    <i class="fas fa-heart fa-3x f-col"></i>
+                    <% end %>
+                  <% else %>
+                    <%= link_to item_likes_path(item.id), method: :post do %>
+                    <i class="far fa-heart fa-3x f-col"></i>
+                    <% end %>
+                  <% end %>
+                <% end %>
+              <% end %>
+
+                
+
+
               </div>
             </div>
             <% end %>
