--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -24,10 +24,20 @@
       </h3>
       <div class='item-price'>
         <span><%= result.selling_price %>円<br><%= result.burden.name%></span>
-        <div class='star-btn'>
-          <%= image_tag "star.png", class:"star-icon" %>
-          <span class='star-count'>0</span>
-        </div>
+
+      <% if user_signed_in? %>
+        <% if result.user_id != current_user.id %>
+          <% if Like.exists?(user_id: current_user.id, item_id: result.id) %>
+            <%= link_to item_like_path(item_id: result.id, id: result.likes[0].id ), method: :delete do %>
+            <i class="fas fa-heart fa-3x f-col"></i>
+            <% end %>
+          <% else %>
+            <%= link_to item_likes_path(result.id), method: :post do %>
+            <i class="far fa-heart fa-3x f-col"></i>
+            <% end %>
+          <% end %>
+        <% end %>
+      <% end %>
       </div>
     </div>
     <% end %>
