--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -65,10 +65,23 @@
       </tbody>
     </table>
     <div class="option">
-      <div class="favorite-btn">
-        <%= image_tag "star.png" ,class:"favorite-star-icon" ,width:"20",height:"20"%>
-        <span>お気に入り 0</span>
-      </div>
+
+      <% if user_signed_in? %>
+        <% if @item.user_id != current_user.id %>
+          <div class="favorite-btn">
+            <% if Like.exists?(user_id: current_user.id, item_id: @item.id) %>
+              <%= link_to item_like_path(item_id: @item.id, id: @item.likes[0].id ), method: :delete do %>
+              <i class="fas fa-heart fa-3x f-col"></i>
+              <% end %>
+            <% else %>
+              <%= link_to item_likes_path(@item.id), method: :post do %>
+              <i class="far fa-heart fa-3x f-col"></i>
+              <% end %>
+            <% end %>
+          </div>
+        <% end %>
+      <% end %>
+
       <div class="report-btn">
         <%= image_tag "flag.png" ,class:"report-flag-icon" ,width:"20",height:"20"%>
         <span>不適切な商品の通報</span>
