--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -68,6 +68,12 @@
 
 .brand-list {
   text-decoration: none;
+  margin-right: 3vw;
+  color: #333333;
+}
+
+.favorite-list {
+  text-decoration: none;
   color: #333333;
 }
 
