--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -170,7 +170,7 @@
                 <%= item.product_name %>
               </h3>
               <div class='item-price'>
-                <span><%= item.selling_price %>円<br><%= item.burden.name%></span>
+                <span class="item-price-color"><%= item.selling_price %>円<br><%= item.burden.name%></span>
 
               <% if user_signed_in? %>
                 <% if item.user_id != current_user.id %>
