--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -286,6 +286,10 @@ a {
   color: black;
 }
 
+.item-price-color {
+  color: black;
+}
+
 .item-name {
   font-size: 2.5vh;
 }
@@ -321,17 +325,13 @@ a {
   font-weight: bold;
 }
 
-.category-name {
-  // position: absolute;
-  font-size: 24px;
-}
 
 .category-name {
   display: block;
   text-align: center;
   margin: 24px 0;
   font-weight: bold;
-
+  font-size: 24px;
 }
 
 .search-btn {
